--- a/README.Rmd
+++ b/README.Rmd
@@ -26,14 +26,10 @@ Contingency tables are a popular means of presenting categorical data in textboo
 * `flatten_ct()` takes an $i \times j \times k$ contingency table, and turns it into a tibble.
 
 * `goodness_of_fit()` takes a logistic or probit regression model, and does a $\chi^{2}$ Goodness of Fit Test. The test statistic is one of:
-$$
-  \chi^{2} =
-  \sum_{\forall i}\frac{\left( O_{i} - E_{i} \right)^{2}}{E_{i}}
-$$
-$$
-  G^{2} =
-  \sum_{\forall i}O_{i} \ln\left( \frac{O_{i}}{E_{i}} \right)
-$$
+
+[Chi Squared Equation](https://latex.codecogs.com/gif.latex?%5Cchi%5E%7B2%7D%20%3D%20%5Csum_%7B%5Cforall%20i%7D%5Cfrac%7B%5Cleft%28%20O_%7Bi%7D%20-%20E_%7Bi%7D%20%5Cright%29%5E%7B2%7D%7D%7BE_%7Bi%7D%7D)
+
+[G Squared Equation](https://latex.codecogs.com/gif.latex?G%5E%7B2%7D%20%3D%20%5Csum_%7B%5Cforall%20i%7DO_%7Bi%7D%20%5Cln%5Cleft%28%20%5Cfrac%7BO_%7Bi%7D%7D%7BE_%7Bi%7D%7D%20%5Cright%29)
 
 ## Tidy Data
 `flatr` is designed to work with the [tidyverse](https://www.tidyverse.org/) series of packages. Tidy data is data in a "long" format, where each variable has its own column.
