--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ library(flatr)
 data("lung_cancer")
 ```
 
-# flatr
+# flatr <img src="man/figures/logo.png" align="right" />
 [![Travis-CI Build Status](https://travis-ci.org/EvilGRAHAM/flatr.svg?branch=master)](https://travis-ci.org/EvilGRAHAM/flatr)
 
 ## Overview
